--- a/company/add-asset.html
+++ b/company/add-asset.html
@@ -1,13 +1,10 @@
-         <!-- Breadcrumb -->
-            <ol class="breadcrumb">
-              <li><a href="#">Home</a></li>
-              <li><a >Asset Master</a></li>
-              <li class="active">Add Assets</li>
-            </ol>
-            <!-- Add/Edit Asset -->
+        <div class="col-lg-12" style="border-bottom:1px #eee solid;padding-bottom:3%;margin-bottom:1%">
+                 <div><h3>Add Asset</h3></div>
+        </div>
+  
+        <!-- Add/Edit Asset -->
             <div class="col-lg-10">
               <div class="panel panel-default" style="border-radius:0px;">
-                <div class="panel-heading add-asset"><h3>ADD ASSETS</h3></div>
                 <div class="panel-body" ng-controller="AddAssetController">
                     <form class="form-horizontal" role="form"  name="assetFeed" novalidate>
                       
@@ -27,7 +24,13 @@
                            <p ng-show="assetForm.assetname.$error.minlength"  ng-class="{ 'has-error' : assetForm.assetname.$invalid && !userForm.name.$pristine }" class="alert alert-danger" required>Username is too short.</p>
                         </div>
                       </div>
-
+                      <div class="form-group">
+                        <label for="asset-name" class="col-sm-2 control-label">Asset Name</label>
+                        <div class="col-sm-6">
+                          <input type="text" name="assetname" class="form-control" id="asset-name" placeholder="Asset Name" ng-model="assetForm.asid" ng-minlength="4">
+                           <p ng-show="assetForm.assetname.$error.minlength"  ng-class="{ 'has-error' : assetForm.assetname.$invalid && !userForm.name.$pristine }" class="alert alert-danger" required>Username is too short.</p>
+                        </div>
+                      </div>
                       <!-- Serial No of the asset-->
                       <div class="form-group">
                         <label for="serial-no" class="col-sm-2 control-label">Serial No</label>
@@ -75,8 +78,6 @@
                           <a href="#" class="but-cancel">Cancel</a>
                         </div>
                       </div>
-
-            {{assetForm}}
                     </form>
                 </div>
                 </div>
