--- a/company/remove-asset.html
+++ b/company/remove-asset.html
@@ -6,11 +6,13 @@
               <li><a >Asset Master</a></li>
               <li class="active">Movement History</li>
             </ol>
+            <div class="col-lg-12" style="border-bottom:1px #eee solid;padding-bottom:3%;margin-bottom:1%">
+                 <div><h3>Remove Asset</h3></div>
+            </div>
             <!-- Asset Details -->
             <div class="col-lg-12">
               <div class="panel panel-default" style="border-radius:0px;">
-                <div class="panel-heading movement-history"><h3>REMOVE ASSET</h3></div>
-                <div class="panel-body">
+               <div class="panel-body">
                     <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="removeAlert()">{{alert.msg}}</alert>
                     <select name="rm-asset" ng-model="rmasset" ng-options="asset.id as asset.name for asset in assetList">
                     </select>
