New Stable release

--- a/company/import-csv.html
+++ b/company/import-csv.html
@@ -16,7 +16,7 @@
                         action="http://localhost:1337/upload/upload"
                         method="post">
                         <input type="file" name="csvFile" />
-                        <input type="submit" value="submit"/>
+                        <input class="btn btn-primary" type="submit" value="submit"/>
                     </form>
                 </div>
               </div>
