--- a/company/scan-screen.html
+++ b/company/scan-screen.html
@@ -55,14 +55,14 @@
                             
                               <p><strong>Employee Name: </strong> {{empData.name}} </p>
                               <p><strong>Employee LPN : </strong> {{empData.empid}}</p>
-                              <p><strong>Mac ID : </strong>  {{empData.mac}}</p>
+                              <p><strong>Unique ID : </strong>  {{empData.mac}}</p>
                               <p><strong>Email: </strong> {{empData.email}} </p>
                               <p><strong>Designation : </strong> {{empData.desig}}</p>
                               <p><strong>Phone : </strong>  {{empData.phone}}</p>
                               
                           </div>
                           <div class="col-md-6 right-asset-move">        
-                            <p class="img-right-emp-data"><img src="http://media-cache-ec0.pinimg.com/736x/8f/99/2b/8f992b54d28760ed078c3f7a88233dea.jpg"></p>
+                            <p class="img-right-emp-data"><img src="{{empData.url}}"></p>
                           </div>
                   </div>
 
