--- a/company/index.html
+++ b/company/index.html
@@ -10,7 +10,6 @@
     <link href="css/datepicker.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  
   </head>
 
   <body ng-app="assetApp">
@@ -52,18 +51,20 @@
 
             <li><a><i class="fa fa-bar-chart-o"></i>Realtime View<span class="fa fa-chevron-circle-right"></span></a>
               <ul><!-- 
-               <li><a href="#"><i class="fa fa-location-arrow"></i>Location of Assets</a></li>  
-               <li><a href="#"><i class="fa fa-search"></i>Search by Location</a></li>   -->
+               <li><a href="#"><i class="fa fa-location-arrow"></i>Location of Assets</a></li> -->
+               <li><a href="#write-tag"><i class="fa fa-search"></i>Write NFC Tag</a></li>   
                <li><a href="#scan-screen/"><i class="fa fa-search"></i>Scan Asset</a></li>  
               </ul>
             </li>
 
             <li><a><i class="fa fa-sitemap"></i> Asset Master<span class="fa fa-chevron-circle-right"></span></a>
               <ul>
-               <li><a href="#add-asset/"><i class="fa fa-plus-square-o"></i> Add Assets</a></li>  
-               <li><a href="#remove-asset/"><i class="fa fa-trash-o"></i> Remove Assets</a></li>  
-               <li><a href="#list-all-assets/"><i class="fa fa-reorder"></i> List all Assets</a></li>  
-               <li><a href="#movement-history/"><i class="fa fa-truck"></i>Movement History</a></li>  <!-- 
+               <!-- <li><a href="#add-asset/"><i class="fa fa-plus-square-o"></i> Add Assets</a></li>  
+                --><!-- <li><a href="#remove-asset/"><i class="fa fa-trash-o"></i> Remove Assets</a></li>   -->
+               <li><a href="#list-all-assets/"><i class="fa fa-reorder"></i> List all Assets</a></li> 
+
+               <li><a href="#import-csv/"><i class="fa fa-file-archive-o"></i>Import Asset Data</a></li>  <!-- 
+               <li><a href="#movement-history/"><i class="fa fa-truck"></i>Movement History</a></li>   
                <li><a href="#ownership-history/"><i class="fa fa-database"></i> Ownership History</a></li>  --> 
               </ul>
             </li>
@@ -72,7 +73,7 @@
               <ul>
                <li><a href="#list-all-employees/"><i class="fa fa-sort-amount-asc"></i>List all employees</a></li>  
                <li><a href="#map-asset/"><i class="fa fa-link"></i>Map Assets</a></li>  
-               <li><a href="#import-csv/"><i class="fa fa-file-archive-o"></i>Import CSV Data</a></li>  
+               <li><a href="#import-csv/"><i class="fa fa-file-archive-o"></i>Import Employee Data</a></li>  
               </ul>
             </li>
 
@@ -113,10 +114,18 @@
 
     <script src="js/angular-ui.min.js"></script>
     <script src="js/app/app.js"></script>
+    <script src="js/app/qrcode.js"></script>
+    <script src="js/qrcode.js"></script>
+    <script src="http://markusslima.github.io/bootstrap-filestyle/js/bootstrap-filestyle.min.js"></script>
     <script>
-  $(function () {
-    $('#myTab a:last').tab('show')
-  })
-</script>
+      $(function () {
+        $('#myTab a:last').tab('show');
+        $(":file").filestyle({icon: false});
+      })
+      
+    </script>
+
+    
+
   </body>
 </html>
