--- a/company/list-all-employee.html
+++ b/company/list-all-employee.html
@@ -8,7 +8,7 @@
 
             <!--  -->
             <div class="col-lg-12" style="border-bottom:1px #eee solid;padding-bottom:3%;margin-bottom:1%">
-                 <div class="panel-heading movement-history"><h3>LIST ALL EMPLOYEES</h3></div>
+                 <div class="panel-heading movement-history"><h3>ALL EMPLOYEE DETAILS</h3></div>
             </div>
             <!-- Asset Details -->
             <div class="col-lg-12">
@@ -17,6 +17,7 @@
                     <table class="table table-bordered" id="movement-table">
                         <thead>
                           <th>Sl No</th>
+                          <th>Unique ID</th>
                           <th>Employee Name</th>
                           <th>Designation</th>
                           <th>Phone</th>
@@ -26,6 +27,7 @@
                         <tbody>
                           <tr ng-repeat="emp in empList">
                             <td>{{$index + 1}}</td>
+                            <td>{{emp.uid}}</td>
                             <td>{{emp.name}}</td>
                             <td>{{emp.desig}}</td>
                             <td>{{emp.phone}}</td>
