--- a/company/map-asset.html
+++ b/company/map-asset.html
@@ -4,30 +4,55 @@
                 <li><a >Employee</a></li>
                 <li class="active">Map Assets</li>
               </ol>
+              <div class="col-lg-12" style="border-bottom:1px #eee solid;padding-bottom:3%;margin-bottom:1%">
+                 <div class="panel-heading movement-history"><h3>MAP ASSETS</h3></div>
+            </div>
               <!-- Map Asset -->
               <div class="col-lg-10">
                 <div class="panel panel-default" style="border-radius:0px;">
-                  <div class="panel-heading add-asset"><h3>MAP ASSETS</h3></div>
                   <div class="panel-body">
                       <form class="form-horizontal" role="form">
                         <!-- Employee Name -->
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                           <label for="emp-name" class="col-sm-2 control-label">Employee Name</label>
                           <div class="col-sm-6">
                             <select name="employee" ng-model="mapForm.empid" ng-options="asset.empid as asset.name for asset in empList">
                             </select>
                           </div>
-                        </div>
+                        </div> -->
 
-                        <!-- Asset Name -->
                         <div class="form-group">
+                          <label for="asset-tag" class="col-sm-2 control-label">Employee ID</label>
+                          <div class="col-sm-6">
+                            <input type="text" class="form-control" id="asset-tag" placeholder="Employee Id" ng-model="mapForm.empid" required>
+                          </div>
+                        </div>
+                        <ul style="display:block;max-height:100px;overflow-y:auto;">
+                          <li style="display:block;" ng-repeat="emp in empList | filter:mapForm.empid">
+                            <p ng-click="changeEmpModel(emp)">{{emp.name}} - {{emp.uid}}
+                            </p>
+                          </li>
+                        </ul>
+                        <!-- Asset Name -->
+                       <!--  <div class="form-group">
                           <label for="emp-name" class="col-sm-2 control-label">Asset Name</label>
                           <div class="col-sm-6">
                             <select name="asset" ng-model="mapForm.asid" ng-options="asset.tag as asset.name for asset in assetList">
                             </select>
                           </div>
+                        </div> -->
+                        <div class="form-group">
+                          <label for="asset-tag" class="col-sm-2 control-label">Asset ID</label>
+                          <div class="col-sm-6">
+                            <input type="text" class="form-control" id="asset-tag" placeholder="Asset Id" ng-model="mapForm.asid" required>
+                          </div>
                         </div>
-
+                        <ul style="display:block;max-height:100px;overflow-y:auto;">
+                          <li style="display:block;" ng-repeat="asset in assetList | filter:mapForm.asid">
+                            <p ng-click="changeAssetModel(asset)">{{asset.name}} - {{asset.uid}}
+                            </p>
+                          </li>
+                        </ul>
                         <!-- Notes -->
                         <div class="form-group">
                           <label for="notes" class="col-sm-2 control-label">Notes</label>
